<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/layLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/txtStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/load"
                android:inputType="text"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="startNew"
                    android:text="@string/new_player" />

                <Button
                    android:id="@+id/btnLoad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="startLoad"
                    android:text="@string/load_id" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/layHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:minHeight="200dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtHistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zork_history"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtCommand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enter_a_command"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="submit"
                    android:text="@string/go" />

            </LinearLayout>

            <Switch
                android:id="@+id/swtPredict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/command_builder"
                android:textColor="@color/colorGrey" />

            <HorizontalScrollView
                android:id="@+id/scrPredict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layPredict"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <Switch
                android:id="@+id/swtCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/common_commands"
                android:textColor="@color/colorGrey"
                android:visibility="gone" />

            <TableLayout
                android:id="@+id/layCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnMoveNorth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buttonCommand"
                        android:text="@string/move_north" />

                    <Button
                        android:id="@+id/btnMoveSouth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buttonCommand"
                        android:text="@string/move_south" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnMoveWest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buttonCommand"
                        android:text="@string/move_west" />

                    <Button
                        android:id="@+id/btnMoveEast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buttonCommand"
                        android:text="@string/move_east" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnCheckMove"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buttonCommand"
                        android:text="@string/check_move" />

                    <Button
                        android:id="@+id/btnCheckRoom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buttonCommand"
                        android:text="@string/check_room" />

                    <Button
                        android:id="@+id/btnStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buttonCommand"
                        android:text="@string/status" />

                </TableRow>
            </TableLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>